# Startup-Intelligence-OS

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  HANDOFF.md  LIVE-RESEARCH-ENRICHMENT.md  README.md
susan-team-architect/backend/: .dockerignore  .env.example  Dockerfile  api.py  fly.toml  pyproject.toml  requirements.txt
susan-team-architect/backend/agents/: __init__.py  base_agent.py
susan-team-architect/backend/artifacts/: test-profile.json
susan-team-architect/backend/birch/: __init__.py  __main__.py  rubric.py  schemas.py  scorer.py  writer.py
susan-team-architect/backend/chains/: __init__.py  __main__.py  context.py  engine.py  registry.py  schemas.py
susan-team-architect/backend/collective/: __init__.py  __main__.py  agent_factory.py  capability_predictor.py  evolution_engine.py  knowledge_transfer.py  research_planner.py  schemas.py
susan-team-architect/backend/control_plane/: README.md  __init__.py  __main__.py  audits.py  catalog.py  foundry.py  foundry_ops.py  jobs.py  main.py  prompts.py  protocols.py  schemas.py  writeback.py
susan-team-architect/backend/data/: agent_characteristics.yaml  agent_registry.yaml  company_registry.yaml  dataset_requirements_master.md  project_protocol_targets.yaml
susan-team-architect/backend/fitness_intel/: __init__.py  chunking.py  cli.py  markdown_parser.py  pipeline.py  quality.py  retrieval.py  schemas.py  startup_os.py
susan-team-architect/backend/jake_brain/: __init__.py  autonomous_pipeline.py  autonomous_worker.py  business_pipeline.py  config.py  consolidator.py  context.py  correction_handler.py  (+11 more)
(+1960 files in other folders)
